--- a/aur-repo/gmv-rs/PKGBUILD
+++ b/aur-repo/gmv-rs/PKGBUILD
@@ -22,11 +22,11 @@ replaces=()
 depends=(
     gcc-libs
     glibc
+    openssl
     systemd-libs)
 makedepends=(
     cargo
     cmake
-    openssl
     pkgconf)
 backup=()
 options=(!lto !debug)
@@ -70,6 +70,7 @@ package() {
     #     cargo install --no-track --all-features --root "$pkgdir/usr/" --path .
     install -Dm0644 session/config.yml "${pkgdir}/etc/gmv/session/config.yml"
     install -Dm0644 stream/readme "${pkgdir}/usr/share/doc/gmv/stream/readme"
+    install -Dm0644 LICENSE -t ${pkgdir}/usr/share/licenses/${pkgname}/
 
     find target/release \
         -maxdepth 1 \
