--- a/aur-repo/probe-rs-git/PKGBUILD
+++ b/aur-repo/probe-rs-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=probe-rs-git
-pkgver=0.26.0.r20.ga7ef5ce
+pkgver=0.26.0.r21.g32fe8ea
 pkgrel=1
 pkgdesc="A debugging toolset and library for debugging embedded ARM and RISC-V targets on a separate host"
 arch=($CARCH)
