--- a/aur-repo/lib32-ncurses5-compat-libs/lilac.yaml
+++ b/aur-repo/lib32-ncurses5-compat-libs/lilac.yaml
@@ -1,5 +1,6 @@
 maintainers:
   - github: taotieren
+build_prefix: multilib
 pre_build_script: aur_pre_build(maintainers=['Corax'])
 post_build: aur_post_build
 update_on:
