--- a/aur-repo/lib32-ncurses5-compat-libs/lilac.yaml
+++ b/aur-repo/lib32-ncurses5-compat-libs/lilac.yaml
@@ -1,7 +1,9 @@
 maintainers:
   - github: taotieren
 build_prefix: multilib
-pre_build_script: aur_pre_build(maintainers=['Corax'])
+pre_build_script: |
+  aur_pre_build(maintainers=['Corax'])
+  add_makedepends(['git'])
 post_build: aur_post_build
 update_on:
   - source: aur
