--- a/aur-repo/deeplx-git/PKGBUILD
+++ b/aur-repo/deeplx-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=deeplx-git
-pkgver=1.0.2.r2.gb6d7e96
+pkgver=1.0.4.r0.g85fd738
 pkgrel=1
 pkgdesc="DeepL Free API (No TOKEN required)"
 arch=($CARCH)
