--- a/aur-repo/python-tokenizers/lilac.yaml
+++ b/aur-repo/python-tokenizers/lilac.yaml
@@ -2,8 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['xiota', 'daskol'])
 post_build: aur_post_build
-repo_depends:
-  - python-datasets
+# repo_depends:
+#   -
 update_on:
   - source: aur
     aur: python-tokenizers
