--- a/aur-repo/python-qsnctf/PKGBUILD
+++ b/aur-repo/python-qsnctf/PKGBUILD
@@ -10,19 +10,23 @@ arch=('any')
 url="https://pypi.org/project/qsnctf"
 license=('MIT')
 groups=()
-depends=(python
+depends=(
+    python
     python-pyexecjs
     python-pybase62
     python-base58
     python-requests
     python-beautifulsoup4
     python-sympy
-    python-urllib3
-    python-rarfile)
-makedepends=(python-build
+    #     python-urllib3
+    python-rarfile
+)
+makedepends=(
+    python-build
     python-installer
     python-setuptools
-    python-wheel)
+    python-wheel
+)
 checkdepends=()
 optdepends=()
 provides=(${pkgname} qsnctf qsnctf-python)
