jlink-flush-gui-git: auto updated to 62d5ba7.r10.g06b7689-1

--- a/aur-repo/jlink-flush-gui-git/PKGBUILD
+++ b/aur-repo/jlink-flush-gui-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgbase=jlink-flush-gui-git
 pkgname=jlink-flush-gui-git
-pkgver=62d5ba7.r9.g36f01c5
-pkgrel=2
+pkgver=62d5ba7.r10.g06b7689
+pkgrel=1
 groups=()
 pkgdesc="JLink Flush GUI"
 arch=($CARCH)
