--- a/aur-repo/jlink-flush-gui-git/PKGBUILD
+++ b/aur-repo/jlink-flush-gui-git/PKGBUILD
@@ -8,7 +8,7 @@ groups=()
 pkgdesc="JLink Flush GUI"
 arch=($CARCH)
 url="https://github.com/duapple/JLink_Flush_GUI"
-license=('GPL-3.0-only')
+license=('MIT')
 provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
 _qt=qt6
