--- a/aur-repo/mfgtools-git/PKGBUILD
+++ b/aur-repo/mfgtools-git/PKGBUILD
@@ -49,8 +49,8 @@ source=("${pkgbase}::git+${url}.git"
     "uuu-complete.bash")
 noextract=()
 sha256sums=('SKIP'
-            'SKIP'
-            'ffc8e32655ce574a4719c85c5c9a3530a5ec619e933fc801a291df8ec506a442')
+    'SKIP'
+    'ffc8e32655ce574a4719c85c5c9a3530a5ec619e933fc801a291df8ec506a442')
 #validpgpkeys=()
 
 pkgver() {
@@ -70,9 +70,9 @@ prepare() {
 }
 
 build() {
-    export CFLAGS=$CFLAGS
-    export CXXFLAGS=$CXXFLAGS
-    export LDFLAGS=$LDFLAGS
+    export CFLAGS+=" ${CPPFLAGS}"
+    export CXXFLAGS+=" ${CPPFLAGS}"
+    export LDFLAGS+=" ${LDFLAGS}"
 
     cd "${srcdir}/${pkgbase}"
     cmake -Bbuild -DCMAKE_INSTALL_PREFIX=/usr \
