--- a/aur-repo/openfpgaloader-git/PKGBUILD
+++ b/aur-repo/openfpgaloader-git/PKGBUILD
@@ -25,6 +25,10 @@ makedepends=(
   'git'
   'ninja'
   'pkgconf'
+  # build doc
+  python-sphinx
+  python-yaml
+  python-tabulate
 )
 provides=('openfpgaloader')
 conflicts=('openfpgaloader')
@@ -61,9 +65,14 @@ build() {
     -GNinja
 
   ninja -C build
+
+  cd doc
+  make html
 }
 
 package() {
   DESTDIR="${pkgdir}" ninja -C "${srcdir}"/${pkgname}/build install
   install -Dm 0644 "${srcdir}/${pkgname}"/99-openfpgaloader.rules "$pkgdir"/usr/lib/udev/rules.d/99-openfpgaloader.rules
+  install -dm0644 ${pkgdir}/usr/share/doc/${pkgname}
+  cp -r "${srcdir}"/${pkgbase}/doc/_build/html "${pkgdir}/usr/share/doc/${pkgname}/"
 }
