--- a/aur-repo/gmv-git/PKGBUILD
+++ b/aur-repo/gmv-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=gmv-git
 _name=${pkgname%-git}
-pkgver=0.1.r32.g2f45ef9
+pkgver=0.1.r33.gfb894fd
 pkgrel=1
 pkgdesc="This is a video surveillance implementation based on GB28181: compatible with 2016 and 2022 versions."
 arch=($CARCH)
