--- a/aur-repo/openfpgaloader-git/PKGBUILD
+++ b/aur-repo/openfpgaloader-git/PKGBUILD
@@ -76,4 +76,7 @@ package() {
   install -Dm 0644 "${srcdir}/${pkgname}"/99-openfpgaloader.rules "$pkgdir"/usr/lib/udev/rules.d/99-openfpgaloader.rules
   install -dm0644 ${pkgdir}/usr/share/doc/${pkgname}
   cp -r "${srcdir}"/${pkgbase}/doc/_build/html "${pkgdir}/usr/share/doc/${pkgname}/"
+
+  chown root:root "${pkgdir}/usr/share/doc/${pkgname}/"
+  chmod 644 -R "${pkgdir}/usr/share/doc/${pkgname}/"
 }
