--- a/aur-repo/ch34xsercfg-git/lilac.yaml
+++ b/aur-repo/ch34xsercfg-git/lilac.yaml
@@ -1,9 +1,10 @@
 maintainers:
   - github: taotieren
+build_prefix: aur-repo-x86_64
 pre_build: vcs_update
-repo_depends:
-  - libch9344ser-git
-  - libch343ser-git
+# repo_depends:
+#   - libch9344ser-git
+#   - libch343ser-git
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
