--- a/aur-repo/can-utils-git/PKGBUILD
+++ b/aur-repo/can-utils-git/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgbase=can-utils-git
 pkgname=can-utils-git
-pkgver=2023.03.r255.g01083a6
+pkgver=2025.01.r2.g4364d65
 pkgrel=1
 groups=()
 pkgdesc="Linux-CAN / SocketCAN user space applications"
