--- a/aur-repo/un-lock-git/PKGBUILD
+++ b/aur-repo/un-lock-git/PKGBUILD
@@ -3,7 +3,7 @@
 pkgbase=un-lock-git
 pkgname=miunlocktool-git
 _name=MiUnlockTool
-pkgver=1.5.8.r5.g74eebe0
+pkgver=1.5.8.r8.gf6d8782
 pkgrel=1
 pkgdesc="MiUnlockTool developed to retrieve encryptData(token) for Xiaomi devices for unlocking bootloader, It is compatible with all platforms."
 arch=(any)
