--- a/aur-repo/stm32cubeclt/lilac.yaml
+++ b/aur-repo/stm32cubeclt/lilac.yaml
@@ -3,8 +3,8 @@ maintainers:
 build_prefix: aur-repo-x86_64
 pre_build_script: aur_pre_build(maintainers=['yjun'])
 post_build: aur_post_build
-repo_depends:
-  - stlink-server
+# repo_depends:
+#   - stlink-server
 update_on:
   - source: aur
     aur: stm32cubeclt
