--- a/aur-repo/stm32cubeide/lilac.yaml
+++ b/aur-repo/stm32cubeide/lilac.yaml
@@ -3,10 +3,10 @@ maintainers:
 build_prefix: aur-repo-x86_64
 pre_build_script: aur_pre_build(maintainers=['kumen'])
 post_build: aur_post_build
-repo_depends:
-  - jlink-software-and-documentation
-  - ncurses5-compat-libs
-  - stlink-server
+# repo_depends:
+#   - jlink-software-and-documentation
+#   - ncurses5-compat-libs
+#   - stlink-server
 update_on:
   - source: aur
     aur: stm32cubeide
