--- a/aur-repo/python-jaxtyping/lilac.yaml
+++ b/aur-repo/python-jaxtyping/lilac.yaml
@@ -1,9 +1,10 @@
 maintainers:
   - github: taotieren
+build_prefix: aur-repo-x86_64
 pre_build_script: aur_pre_build(maintainers='daskol')
 post_build: aur_post_build
-repo_depends:
-  - python-jax
+# repo_depends:
+#   - python-jax
 update_on:
   - source: aur
     aur: python-jaxtyping
