--- a/aur-repo/python-kintree/lilac.yaml
+++ b/aur-repo/python-kintree/lilac.yaml
@@ -1,8 +1,11 @@
 maintainers:
   - github: taotieren
 build_prefix: aur-repo-x86_64
-pre_build_script: aur_pre_build(maintainers=['GPereira'])
-post_build: aur_post_build
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
 # repo_depends:
 #   - python-digikey-api-git
 #   - python-flet
