--- a/aur-repo/groonga/lilac.yaml
+++ b/aur-repo/groonga/lilac.yaml
@@ -1,10 +1,11 @@
 maintainers:
   - github: taotieren
+build_prefix: aur-repo-x86_64
 pre_build_script: aur_pre_build(maintainers=['cosmo0920'])
 post_build: aur_post_build
-repo_depends:
-  - mecab-git
-  - mecab-ipadic
+# repo_depends:
+#   - mecab-git
+#   - mecab-ipadic
 update_on:
   - source: regex
     url: https://groonga.org/
