--- a/aur-repo/python-kintree/lilac.yaml
+++ b/aur-repo/python-kintree/lilac.yaml
@@ -15,6 +15,8 @@ post_build_script: |
 #   - python-thefuzz
 #   - python-wrapt-timeout-decorator
 update_on:
-  - source: pypi
-    pypi: kintree
+  # - source: pypi
+  #   pypi: kintree
+  - source: github
+    github: sparkmicro/Ki-nTree
   - alias: python
