--- a/aur-repo/maple-file/lilac.yaml
+++ b/aur-repo/maple-file/lilac.yaml
@@ -1,16 +1,16 @@
 maintainers:
   - github: taotieren
-build_prefix: archlinuxcn-x86_64
+build_prefix: aur-repo-x86_64
 pre_build_script: |
   update_pkgver_and_pkgrel(_G.newver)
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-repo_depends:
-  - flutter
-  - flutter-devel
-  - flutter-target-linux
-  - flutter-intellij-patch
+# repo_depends:
+#   - flutter
+#   - flutter-devel
+#   - flutter-target-linux
+#   - flutter-intellij-patch
 update_on:
   - source: github
     github: honmaple/maple-file
