--- a/aur-repo/python-kintree/PKGBUILD
+++ b/aur-repo/python-kintree/PKGBUILD
@@ -35,8 +35,8 @@ source=(
     "kintree.png"
     "kintree.desktop")
 sha256sums=('85e7587bcc84018c14db7bde82bc6bb6bd42a4f15c7b6834b43eec45a15ee27c'
-            '46c5a724fab746f094e2ae73d5aa1f7d8b91446d6c841ec3a4f134f64c6277d8'
-            '7e95214b781f866ebbbf64510eb956337907f824b0a18691ca0b37766ef817d4')
+    '46c5a724fab746f094e2ae73d5aa1f7d8b91446d6c841ec3a4f134f64c6277d8'
+    '7e95214b781f866ebbbf64510eb956337907f824b0a18691ca0b37766ef817d4')
 
 build() {
     cd "$srcdir/$_name-$pkgver"
@@ -49,10 +49,10 @@ package() {
     chmod 777 -R $pkgdir
 
     # Desktop file
-    install -Dm644 "../${_name}.desktop" \
-        "${pkgdir}/usr/share/applications/${_name}.desktop"
+    install -Dm644 "$srcdir/kintree.desktop" \
+        "${pkgdir}/usr/share/applications/kintree.desktop"
 
     # Icon file
-    install -Dm644 "../kintree.png" \
-        "${pkgdir}/usr/share/pixmaps/${_name}.png"
+    install -Dm644 "$srcdir/kintree.png" \
+        "${pkgdir}/usr/share/pixmaps/kintree.png"
 }
