--- a/aur-repo/translater-git/PKGBUILD
+++ b/aur-repo/translater-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=translater-git
-pkgver=0.6.2.r1.gb3ea816
-pkgrel=2
+pkgver=0.7.0.r8.g25d3a61
+pkgrel=1
 pkgdesc="command line translate tools, Use headless firefox internally, support Linux/Mac for now."
 arch=($CARCH)
 url="https://github.com/crystal-china/translater"
@@ -11,21 +11,25 @@ provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
 replaces=()
 depends=(
-    firefox
-    geckodriver
     glibc
     gc
     gcc-libs
-    libevent
     sqlite
     openssl
     pcre2
-    zlib)
-makedepends=(git
+    zlib
+)
+makedepends=(
+    git
     crystal
     shards
-    pkgconf)
-optdepends=("goldendict: Feature-rich dictionary lookup program supporting multiple dictionary formats")
+    pkgconf
+)
+optdepends=(
+    "goldendict: Feature-rich dictionary lookup program supporting multiple dictionary formats"
+    "firefox: Fast, Private & Safe Web Browser"
+    "geckodriver: Proxy for using W3C WebDriver-compatible clients to interact with Gecko-based browsers. "
+)
 backup=()
 options=()
 install=
@@ -48,10 +52,12 @@ pkgver() {
 build() {
     cd "${srcdir}/${pkgname}"
     export LDFLAGS+=" -Wl,-z,relro,-z,now -Wl,-z,shstk"
+    mkdir -p bin
     make release
 }
 
 package() {
     cd "${srcdir}/${pkgname}"
     DESTDIR=${pkgdir}/usr make install
+    install -Dm644 ${srcdir}/${pkgbase}/LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}/"
 }
