--- a/aur-repo/mecab-git/PKGBUILD
+++ b/aur-repo/mecab-git/PKGBUILD
@@ -13,7 +13,10 @@ depends=(
 	glibc
 	sh
 )
-makedepends=('git')
+makedepends=(
+	'git'
+	'wget'
+)
 conflicts=('mecab')
 provides=('mecab')
 license=('BSD-3-Clause AND GPL-2.0-or-later AND LGPL-2.1-or-later')
