--- a/aur-repo/clang15/lilac.yaml
+++ b/aur-repo/clang15/lilac.yaml
@@ -1,7 +1,9 @@
 maintainers:
   - github: taotieren
 # build_prefix: aur-repo-x86_64
-pre_build_script: aur_pre_build(maintainers=['greyltc'])
+pre_build_script: |
+  aur_pre_build(maintainers=['greyltc'])
+  add_makedepends(['python-distutils-extra'])
 post_build: aur_post_build
 repo_depends:
   - compiler-rt15
