--- a/aur-repo/mesaflash-git/PKGBUILD
+++ b/aur-repo/mesaflash-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=mesaflash-git
-pkgver=3.4.9.r24.ga4ae5f2
+pkgver=3.4.9.r25.g91fb3ab
 pkgrel=1
 pkgdesc="Configuration and diagnostic tool for Mesa Electronics PCI(E)/ETH/EPP/USB/SPI boards"
 arch=($CARCH)
