--- a/aur-repo/bookget-git/PKGBUILD
+++ b/aur-repo/bookget-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=bookget-git
-pkgver=25.0213
+pkgver=25.0213.1.g3a5155b
 pkgrel=1
 pkgdesc="bookget 数字图书馆下载工具，目前支持约 50+ 个数字图书馆。"
 arch=($CARCH)
