--- a/aur-repo/python-ocp/lilac.yaml
+++ b/aur-repo/python-ocp/lilac.yaml
@@ -1,11 +1,14 @@
 maintainers:
   - github: taotieren
 build_prefix: aur-repo-x86_64
-pre_build_script: aur_pre_build(maintainers=['greyltc'])
+pre_build_script: |
+  aur_pre_build(maintainers=['greyltc'])
+  add_makedepends(['python-lief'])
 post_build: aur_post_build
-repo_depends:
-  - clang15
-  - lief
+# repo_depends:
+#   - clang15
+#   - lief
+#   - python-lief
 update_on:
   - source: aur
     aur: python-ocp
