--- a/aur-repo/stlink-server/lilac.yaml
+++ b/aur-repo/stlink-server/lilac.yaml
@@ -1,8 +1,11 @@
 maintainers:
   - github: taotieren
+# build_args: -c
+makepkg_args: --skippgpcheck --noconfirm
 build_prefix: aur-repo-x86_64
 pre_build_script: aur_pre_build(maintainers=['yjun'])
 post_build: aur_post_build
 update_on:
   - source: aur
     aur: stlink-server
+
