--- a/aur-repo/stlink-server/lilac.yaml
+++ b/aur-repo/stlink-server/lilac.yaml
@@ -1,7 +1,7 @@
 maintainers:
   - github: taotieren
 # build_args: -c
-makechrootpkg_args: -- -D ${srcdir} -d
+makechrootpkg_args: -- -r ${srcdir}
 makepkg_args: --skippgpcheck --noconfirm
 build_prefix: aur-repo-x86_64
 pre_build_script: aur_pre_build(maintainers=['yjun'])
