--- a/aur-repo/stlink-server/lilac.yaml
+++ b/aur-repo/stlink-server/lilac.yaml
@@ -2,7 +2,7 @@ maintainers:
   - github: taotieren
 # build_args: -c
 # makechrootpkg_args: -- -r ${srcdir}
-makepkg_args: --skippgpcheck --noconfirm
+# makepkg_args: --skippgpcheck --noconfirm
 build_prefix: aur-repo-x86_64
 pre_build_script: aur_pre_build(maintainers=['yjun'])
 post_build: aur_post_build
