--- a/aur-repo/geda-gaf/lilac.yaml
+++ b/aur-repo/geda-gaf/lilac.yaml
@@ -1,7 +1,9 @@
 maintainers:
   - github: taotieren
 build_prefix: aur-repo-x86_64
-pre_build_script: aur_pre_build(maintainers=['bidulock'])
+pre_build_script: |
+  aur_pre_build(maintainers=['bidulock'])
+  add_makedepends(['guile2.2'])
 post_build: aur_post_build
 repo_depends:
   - libstroke
