geda-gaf: auto updated to 1.10.2-4

--- a/aur-repo/geda-gaf/PKGBUILD
+++ b/aur-repo/geda-gaf/PKGBUILD
@@ -5,13 +5,13 @@
 
 pkgname=geda-gaf
 pkgver=1.10.2
-pkgrel=3
+pkgrel=4
 pkgdesc="gEDA/gaf suite - Contains gschem, gnetlist, gsymcheck, gattrib, utilities and documentation from the gEDA project"
 arch=('x86_64' 'i686')
 url="http://geda-project.org/"
 license=('GPL')
 depends=('gtk2' 'guile' 'libstroke' 'shared-mime-info' 'hicolor-icon-theme')
-makedepends=('pkg-config' 'perl-xml-parser' 'flex' 'awk' 'python2')
+makedepends=("awk" "flex" "guile2.2" "perl-xml-parser" "pkg-config" "python2")
 optdepends=('python2: for several of the commands (garchive, tragesym, xorn)'
             'gawk: for sw2asc'
             'imagemagick: png/pdf output'
