magiskboot-git: auto updated to 28101.78.r9.g6d1447e-1

--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28101.78.r8.g916ada8
+pkgver=28101.78.r9.g6d1447e
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=($CARCH)
