--- a/aur-repo/yoctopuce/PKGBUILD
+++ b/aur-repo/yoctopuce/PKGBUILD
@@ -1,4 +1,5 @@
 # Maintainer: Luis Martinez <luis dot martinez at disroot dot org>
+# Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=yoctopuce
 pkgver=2.0.64286
