--- a/aur-repo/openfpgaloader-git/PKGBUILD
+++ b/aur-repo/openfpgaloader-git/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Filipe Laíns (FFY00) <lains@archlinux.org>
 
 pkgname=openfpgaloader-git
-pkgver=0.13.1.r30.g79054f3
+pkgver=0.13.1.r31.gc4d4e8d
 pkgrel=1
 pkgdesc="Universal utility for programming FPGA"
 arch=($CARCH)
