--- a/aur-repo/linuxcnc-git/PKGBUILD
+++ b/aur-repo/linuxcnc-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer:  Jason Kercher <jkercher 43 at gmail dot com>
 
 pkgname=linuxcnc-git
-pkgver=2.9.4.r2578.g5c7e584057
+pkgver=2.9.4.r2581.g9135c07a91
 pkgrel=1
 pkgdesc="Controls CNC machines. It can drive milling machines, lathes, 3d printers, laser cutters, plasma cutters, robot arms, hexapods, and more (formerly EMC2)"
 arch=($CARCH)
