--- a/aur-repo/x-tools/PKGBUILD
+++ b/aur-repo/x-tools/PKGBUILD
@@ -9,8 +9,8 @@ pkgdesc="Qt SerialPort-BLE-UDP-TCP-WebSocket-Modbus-CAN Assistant."
 arch=($CARCH)
 url="https://github.com/x-tools-author/x-tools"
 license=('LGPL-3.0-or-later')
-provides=(${pkgname})
-conflicts=(${pkgname})
+provides=(${pkgname} xtools)
+conflicts=(${pkgname} xtools)
 depends=(
     bash
     gcc-libs
