--- a/aur-repo/wx-tools/lilac.yaml
+++ b/aur-repo/wx-tools/lilac.yaml
@@ -10,4 +10,4 @@ update_on:
     github: x-tools-author/wx-tools
     use_max_tag: true
     prefix: v
-    # exclude_regex: "continuous"
+    exclude_regex: "continuous"
