--- a/aur-repo/n-m3u8dl-re-git/PKGBUILD
+++ b/aur-repo/n-m3u8dl-re-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=n-m3u8dl-re-git
-pkgver=0.3.0.beta.r6.g1eebd7b
+pkgver=0.3.0.beta.r7.g30499f5
 pkgrel=1
 epoch=
 pkgdesc="Cross-Platform, beautiful and powerful stream downloader for DASH/HLS."
