--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28101.78.r11.g2fb23a1
+pkgver=28101.78.r12.g504d55a
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=($CARCH)
